2015-06-14  Kazuyuki Shudo  <shudo@computer.org>

	* lib/{servlet-api-*,jetty-*}.jar
	Jetty was updated from 9.0.6 to 9.2.11.

	* lib/je-*.jar, txt/LICENSE.je-*
	Berkeley DB Java Edition was updated from 5.0.97 to 6.3.8.

2013-11-25  Kazuyuki Shudo  <shudo@computer.org>

	* src/ow/routing/impl/AbstractRoutingDriver.java
	'-i' option of owdhtshell and other commands works again.

2013-11-02  Kazuyuki Shudo  <shudo@computer.org>

	* src/ow/dht/{impl/ChurnTolerantDHTImpl,DHTConfiguration}.java
	A bug in Reputter was fixed.
	Reputter puts up to 100 key-value pairs. 101st pair is not put.

	* lib/{servlet-api-*,jetty-*}.jar
	Jetty was updated from 9.0.5 to 9.0.6.

	* lib/je-*.jar, txt/LICENSE.je-*
	Berkeley DB Java Edition was updated from 5.0.84 to 5.0.97.

2013-09-12  Kazuyuki Shudo  <shudo@computer.org>

	* lib/{servlet-api-*,jetty-*}.jar
	Jetty was updated from 9.0.4 to 9.0.5.

2013-08-14  Kazuyuki Shudo  <shudo@computer.org>

	* lib/{servlet-api-*,jetty-*}.jar
	Jetty was updated from 9.0.3 to 9.0.4.

	* lib/je-*.jar, txt/LICENSE.je-*
	Berkeley DB Java Edition was updated from 5.0.73 to 5.0.84.

	* build.xml
	Removes Git-related files when a target "distclean" invoked.

2013-06-12  Kazuyuki Shudo  <shudo@computer.org>

	* lib/{servlet-api-*,jetty-*}.jar
	Jetty was updated from 8.1.7 to 9.0.3.

	* lib/je-*.jar, txt/LICENSE.je-*
	Berkeley DB Java Edition was updated from 5.0.58 to 5.0.73.

2012-11-15  Kazuyuki Shudo  <shudo@computer.org>

	* src/ow/tool/{dhtshell,mcastshell,memcached}/Main.java
	Main classes do not implement Interruptible.

2012-11-07  Kazuyuki Shudo  <shudo@computer.org>

	* src/ow/util/Expiring{Set,Map}.java
	Instantiates only a thread for each set/map at most.

	* src/ow/{tool/emulator/{EmulatorContext,action/InvocationTask},util/concurrent/*}.java
	A thread pool was moved to SingletonThreadPoolExecutors.

	* src/ow/routing/impl/*RoutingDriverProvider.java
	AbstractRoutingDriverProvider class was removed.
