@@ -1,5 +1,8 @@
 2015-06-14  Kazuyuki Shudo  <shudo@computer.org>
 
+	* lib/commons-cli-*.jar
+	Apache Commons CLI was updated from 1.2 to 1.3.
+
 	* lib/{servlet-api-*,jetty-*}.jar
 	Jetty was updated from 9.0.6 to 9.2.11.
 
